Fixed footer, added overflow:hidden to body, touched up styling to better represent the source.

--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     font-size: 14px;
+    overflow: hidden;
 }
 ul {
     list-style-type: none;
@@ -28,6 +29,7 @@ li a {
     width: 25%;
     padding: 200px;
     text-align: center;
+    height: auto;
 }
 
 #SearchBar {
@@ -42,6 +44,7 @@ li a {
     width: 100%;
     height: 2.5rem;
     background-color:#f2f2f2;
+    overflow: hidden;
 }
 
 #buttons {
@@ -58,6 +61,16 @@ li a {
 input[type=button] {
     width: 10em;
     height: 3em;
-    border-radius: 25px;
+    border-radius: 4px;
     text-align: center;
+    background-color: #f2f2f2;
+    
+}
+
+#gs {
+
+}
+
+#fl {
+
 }
